apps/robertshand-hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robertshand-hello-world-service
spec:
  selector:
    app: robertshand-hello-world
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 80
